---
source: gvb_interp/src/vm.rs
expression: "run_with_files(r#\"\n0 open \"a\" for random as 1 len =2:field 1, 2 asa$(2):\n10 open \"b.DAT\" for input as 2\n20 open \"c.dat\" for output as 3\n30 get 1, 3:input #2, b:write #3, a$(2)+str$(b)\n40 lset a$(2)=mki$(b):put 1,1\n50 input #2, b$:lset a$(2)=b$:put 1,3\n    \"#.trim(),\n               vec![(ExecResult :: End, None)],\n               vec![(b\"a.DAT\", File :: new(b\"abcdefgh\".to_vec()),\n                     b\"\\x7b\\x00cd+ gh\".to_vec(),),\n                    (b\"b.DAT\", File :: new(b\"123\\xff+ ,%/\".to_vec()),\n                     b\"123\\xff+ ,%/\".to_vec()),\n                    (b\"c.dat\", File :: new(b\"+-*/\".to_vec()),\n                     b\"\\\"ef123\\\"\\xff\".to_vec()),])"

---
open file "a.DAT", read: true, write: true, truncate: false
open file "b.DAT", read: true, write: false, truncate: false
open file "c.dat", read: false, write: true, truncate: true
seek file: 4
read from file: [101, 102] 
read from file: [49] 
read from file: [50] 
read from file: [51] 
read from file: [255] 
write to file: [34] 
write to file: [101, 102, 49, 50, 51, 34] 
write to file: [255] 
seek file: 0
write to file: [123, 0] 
read from file: [43] 
read from file: [32] 
read from file: [44] 
seek file: 4
write to file: [43, 32] 
close file
close file
close file

